add query param for gif animation thumbnails (#302)
